--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-ame: Deploy
+name: Deploy
 
 on:
   push:
@@ -13,9 +13,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Run Python script
-      run: python your_script.py
+    - name: Set up Python
+      uses: actions/setup-python@v2
+
+    - name: Run script
+      run: python zenodo/test.py 
       env:
         VERSION_TAG: ${{ github.event.release.tag_name }}
+
+
+      
 
         
