--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,8 +13,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Create zenodo_token file
-      run: echo "ACCESS_TOKEN-sandbox: CNXNk6GBg0dQUvZJsCUEajG4ZZnAr8YUrWPR9oCucnu8vq39jFJDUGoYW6WK" > zenodo_token
+    - name: list files
+      run: ls -a
 
     - name: Set up Python
       uses: actions/setup-python@v2
