--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
     - name: Run script
       run: python zenodo/test.py 
       env:
-        VERSION_TAG: ${{ github.event.release.tag_name }}
+        VERSION_TAG: ${{ github.ref_name }}
 
 
       
