see current dir

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,9 @@ jobs:
     - name: list files
       run: ls -a
 
+    - name: current directory
+      run: pwd
+
     - name: Set up Python
       uses: actions/setup-python@v2
 
